fixes #1 "improve support for multi module projects" fixes #29 "support of ClassGraph as ClasspathScanner"